Move article to drafts

--- a/source/_drafts/2018-04-28.md
+++ b/source/_drafts/2018-04-28.md
@@ -8,11 +8,15 @@ permalink: the-mistakes-i-made-as-a-beginner-programmer
 date: 2018-04-28 14:34:25
 ---
 
+![](https://cat.yufan.me/cats/2018050601.png)
+
 > 认知这些问题，避免犯同样的错误。
 
 首先，写此文的并不想让编程新手对于可能犯的错误感到紧张。我只想让诸位知道有哪些错误，如何识别，以便在未来少走弯路。
 
 我曾经犯了下面说的全部错误，并从每个错误中总结学习。现在的我已经习惯规避这些错误，希望大家也能和我一样。
+
+<!--more-->
 
 下述错误排名不分前后。
 
@@ -63,20 +67,17 @@ date: 2018-04-28 14:34:25
 
 我最喜欢的编码格言是：
 
-> 编码时永远要假想，未来维护逆代码
+> 编码时永远要假想，未来接手的人可能知晓你的住处并因为维护你的代码变成暴力狂。
+>
 > — John Woods
 
-If you can only focus on one aspect of the code that you write, it should be its **readability**. Unclear code is trash. It is not even recyclable.
+**明智的建议，John！**
 
-Never underestimate the importance of code quality. Look at coding as a way to communicate implementations. Your main job as a coder is to clearly communicate the implementations of any solutions that you are working on.
+即使是看似无关紧要的小事，也可能影响深远。例如，如果不注意代码的缩进和大小写，你可能会直接失去工作。
 
-One of my favorite quotes about programming is:
+这些细节比你的编码思考**更加重要**。
 
-> <span class="markup--quote markup--pullquote-quote is-other" name="15942fb5037f anon_1c43bc680ca1" data-creator-ids="c64c4b529a5d anon">_Always code as if the guy who ends up maintaining your code will be a violent psychopath who knows where you live._</span>
-
-> _— John Woods_
-
-**Brilliant advice, John!**
+另一个小细节就是过长的代码，任何一行超过80个字符的代码都会变得难以阅读。你可能会忍不住地将一些判断逻辑放于同一行来减少 if 的声明。
 
 Even the small things matter. For example, if you are not consistent with your indentation and capitalization, you should simply lose your license to code.
 
