Add feature image

--- a/source/_posts/2016-05-23.md
+++ b/source/_posts/2016-05-23.md
@@ -1,14 +1,13 @@
 ---
 title: 好羡慕，你还是学生
 permalink: primary-school-student
+featureImage: https://cat.yufan.me/cats/2016052301.jpg
 id: 154
 updated: '2016-05-23 23:23:15'
 date: 2016-05-23 21:06:58
 tags: 回忆
 categories: 学习
 ---
-
-![cover](https://cat.yufan.me/cats/2016052301.jpg)
 
 上周日在图灵读者群看见一个小学生在图灵社区写古典音乐的点点滴滴，不由得觉得现在的小学生真的好厉害。那个时候像他们那般大的我们，究竟在做什么呢？
 
