--- a/source/_posts/2016-07-01.md
+++ b/source/_posts/2016-07-01.md
@@ -3,12 +3,11 @@ title: 如何阅读一本技术书
 tags:
   - 学习
 permalink: how-to-read-a-technology-book
+featureImage: https://cat.yufan.me/cats/2016070101.jpg
 id: 155
 updated: '2016-07-01 22:22:16'
 date: 2016-07-01 22:06:05
 ---
-
-![cover](https://cat.yufan.me/cats/2016070101.jpg)
 
 读书技术书籍分为三步，第一步，扫读，不用弄懂，就是那么读过去，可以称为囫囵吞枣的状态，直到读完。（这么做的理由很简单，计算机类的知识不可能线性地排列，让读书的人从零到有地一步步学习，比如某些Java书籍上来就说面向对象。你读书的时会发现，很多前面不懂的东西，到了后面讲某个东西，就懂了。但是为何不先讲后面的东西呢？因为太难，你需要前面的某些基础知识。）
 
