--- a/source/_posts/2016-08-01.md
+++ b/source/_posts/2016-08-01.md
@@ -4,12 +4,11 @@ tags:
   - 文字
 categories: 文章
 permalink: my-fickleness-life
+featureImage: https://cat.yufan.me/cats/2016-08-01_2016080101.jpg
 id: 156
 updated: '2016-08-09 22:20:24'
 date: 2016-08-01 01:24:12
 ---
-
-![cover](https://cat.yufan.me/cats/2016-08-01_2016080101.jpg)
 
 这些天被里约热内卢的奥运新闻刷屏。看了好几篇长篇累赘的报道，基本都集中在几点上：环境差，房间烂，场馆没建好，社会乱……微博上也是一堆不求奥运健儿拿金牌，只求平安回家云云的评论。更有意思的是周六CCTV5体育新闻在微博上分享了8年前的[北京奥运会剪辑](http://weibo.com/1750822455/E1gIp3STd)，配上评论：『我们是认真的！』
 
