--- a/source/_posts/2016-08-09.md
+++ b/source/_posts/2016-08-09.md
@@ -4,12 +4,11 @@ tags:
   - 文字
 categories: 文章
 permalink: summer-dream
+featureImage: https://cat.yufan.me/cats/2016-08-09-2016080903.png
 id: 157
 updated: '2016-08-10 08:28:28'
 date: 2016-08-09 21:41:34
 ---
-
-![cover](https://cat.yufan.me/cats/2016-08-09-2016080903.png)
 
 恍然间已经在北京度过第三个夏季。
 
