--- a/source/_posts/2016-11-16.md
+++ b/source/_posts/2016-11-16.md
@@ -4,12 +4,11 @@ tags:
   - 学习
 categories: 学习
 permalink: a-scala-exercise-a-day-1
+featureImage: https://cat.yufan.me/cats/2016-11-16-scala-poster.png
 id: 159
 updated: '2016-11-16 18:44:18'
 date: 2016-11-16 11:18:06
 ---
-
-![cover](https://cat.yufan.me/cats/2016-11-16-scala-poster.png)
 
 1、编写一段代码，将 a 设置为一个 n 个随机整数的数组，要求随机数介于 [0, n) 之间。
 
