--- a/source/_posts/2016-12-11.md
+++ b/source/_posts/2016-12-11.md
@@ -4,12 +4,11 @@ tags:
   - 梦想
 categories: 文章
 permalink: yume
+featureImage: https://cat.yufan.me/cats/2016-12-11-28152830_p0.jpg
 id: 161
 updated: '2017-03-13 22:46:31'
 date: 2016-12-11 14:21:10
 ---
-
-![cover](https://cat.yufan.me/cats/2016-12-11-28152830_p0.jpg)
 
 「あなたの夢は何ですか？」この質問はよく聞かれている。違うときに、同じ人は違う夢を追う。いくつになっても夢を持ち続けているとハッピーですよね。そんな夢に向かって何か努力をしている人って輝いていますよね。
 
