--- a/source/_posts/2017-03-06.md
+++ b/source/_posts/2017-03-06.md
@@ -4,12 +4,11 @@ tags:
   - 学习
 categories: 学习
 permalink: rewrite-your-logic
+featureImage: https://cat.yufan.me/cats/2017-03-06-61215562_p0.png
 id: 163
 updated: '2017-03-13 01:44:37'
 date: 2017-03-06 20:31:42
 ---
-
-![cover](https://cat.yufan.me/cats/2017-03-06-61215562_p0.png)
 
 之前看 Linus Toward 在去年的[某次采访](https://www.youtube.com/watch?v=o8NPllzkFhE&feature=youtu.be&t=890)中说到的好代码坏代码，当中提到了逻辑的精简，能用更通用的逻辑减少 if else 的判断在某种程度上可以使你的代码变得更好。最近一段时间重构了部分老代码，也 Review 了不少代码，对此观点深有感触。
 
