--- a/source/_posts/2017-06-28.md
+++ b/source/_posts/2017-06-28.md
@@ -6,14 +6,9 @@ tags:
   - 工作室
 categories: 游戏
 permalink: atelier-firis-first-year-walk-through
+featureImage: https://wx3.sinaimg.cn/large/80c744e8ly1fc99y0g8rrj21hc0u0dr0.jpg
 date: 2017-06-28 07:52:00
 ---
-
-[![](https://wx3.sinaimg.cn/large/80c744e8ly1fc99y0g8rrj21hc0u0dr0.jpg)](https://wx3.sinaimg.cn/large/80c744e8ly1fc99y0g8rrj21hc0u0dr0.jpg)
-
-（本人最喜欢的服装 =w=）
-
-## 前言
 
 这作不知道是不是因为变革太大，还是 BUG 太多，日版销量暴死，本人买完繁中后才看到要出 PC 的新闻。果然，这很暗荣。不过到现在也没有找到很好的攻略，A9上，该板块虽然升区，但是帖子也多为日文版讨论。本着照顾像我这样的手残玩家的想法，我准备重新打一次一年期。一点点完善该攻略。
 
