--- a/source/_posts/2017-08-12.md
+++ b/source/_posts/2017-08-12.md
@@ -6,12 +6,9 @@ tags:
   - 碎碎念
 categories: 文章
 permalink: rain-in-august
+featureImage: https://cat.yufan.me/cats/41045442_p0.jpg
 date: 2017-08-12 10:52:00
 ---
-
-![](https://cat.yufan.me/cats/41045442_p0.jpg)
-
-<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=29340600&auto=0&height=66"></iframe>
 
 昨日下班，从园区走出来，傍晚的天空乌云密布，伴随着闪电，但却不知道为何，想要走路回家。
 
@@ -38,3 +35,5 @@ date: 2017-08-12 10:52:00
 下了楼，发现草坪上竟然有些星星点点的浅淡小花。比起旁边被雨打得有些月季，它们只是兀自开放，不刻意讨好，亦不在意。
 
 对于工作，也是这样吧，靡不有初，鲜克有终。
+
+<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=29340600&auto=1&height=66"></iframe>
