--- a/source/_posts/2017-09-30.md
+++ b/source/_posts/2017-09-30.md
@@ -6,10 +6,9 @@ tags:
   - ClickHouse
 categories: 学习
 permalink: evolution-of-data-structures-in-yandexmetrica
+featureImage: https://cat.yufan.me/cats/2017-10-03-metrica-600.png
 date: 2017-09-30 10:52:00
 ---
-
-![](https://cat.yufan.me/cats/2017-10-03-metrica-600.png)
 
 Yandex.Metrica 是世界[第二大](https://w3techs.com/technologies/overview/traffic_analysis/all)的线上分析系统，Metrica 处理来自网站或者应用的数据流，将它解析成可分析的格式。
 
