--- a/source/_posts/2017-10-18.md
+++ b/source/_posts/2017-10-18.md
@@ -5,10 +5,9 @@ tags:
   - OneAPM
 categories: 学习
 permalink: two-years-in-oneapm
+featureImage: https://cat.yufan.me/cats/2016-08-31-51915125_p0.png
 date: 2017-10-18 04:52:00
 ---
-
-![](https://cat.yufan.me/cats/2016-08-31-51915125_p0.png)
 
 掐指一算，从 OneAPM 离职也快一个月了，在 OneAPM 工作的种种，仿佛还像是在昨天。细数两年的工作经历，我很庆幸在恰当的时间点和这么一群有激情有活力的人共事。那么，是时候总结一下我在 OneAPM 做的牛（cai）逼（ji）事情了。
 
