--- a/source/_posts/2017-11-13-1.md
+++ b/source/_posts/2017-11-13-1.md
@@ -6,10 +6,9 @@ tags:
   - 文字
 categories: 文章
 permalink: watashitachi-ha-mokuzaidesu
+featureImage: https://cat.yufan.me/cats/2017-11-13-IMG_1222.JPG
 date: 2017-11-13 09:52:00
 ---
-
-![](https://cat.yufan.me/cats/2017-11-13-IMG_1222.JPG)
 
 “唉，你还真是一个不安分的家伙啊！”电话那头的老妈无可奈何地宠溺道。
 
