--- a/source/_posts/2017-11-13.md
+++ b/source/_posts/2017-11-13.md
@@ -5,10 +5,9 @@ tags:
   - OneAPM
 categories: 学习
 permalink: first-three-month-in-oneapm
+featureImage: https://cat.yufan.me/cats/2016-12-11-60171084_p0.jpg
 date: 2017-11-13 02:52:00
 ---
-
-![](https://cat.yufan.me/cats/2016-12-11-60171084_p0.jpg)
 
 最近整理文档，突然看到这份当年写的试用期述职PPT。当时才加入 OneAPM 什么都不知道，姜宁老师带着我步入微服务的大门，知道了 Gateway，了解了 Openresty。
 
