--- a/source/_posts/2016-08-15.md
+++ b/source/_posts/2016-08-15.md
@@ -4,12 +4,11 @@ tags:
   - 鬼父
 categories: 文章
 permalink: future-plan-on-kids
+featureImage: https://cat.yufan.me/cats/2016-08-15-kids2.jpg
 id: 158
 updated: '2016-08-15 07:15:19'
 date: 2016-08-15 06:04:27
 ---
-
-![cover](https://cat.yufan.me/cats/2016-08-15-kids2.jpg)
 
 按照中国目前的计划生育策略，在不考虑交高额罚金的情况下，我能被允许养育的最高子女数量为两个。按照未来生活水平的提高和自我对于生活品质的追求，我不可能也没有精力抚养过多的孩子。所以，现阶段来看，两到三个小孩是不错的选择。但是，计划赶不上变化，也许未来我可能丁克，可能只要一个小孩。所以，这里只是待定稿。
 
