--- a/source/_posts/2017-05-13.md
+++ b/source/_posts/2017-05-13.md
@@ -5,10 +5,9 @@ tags:
   - 学习
 categories: 学习
 permalink: springboot-brief-intro
+featureImage: https://cat.yufan.me/cats/2017-05-13-26782367_p0.jpg
 date: 2017-05-13 20:52:00
 ---
-
-![cover](https://cat.yufan.me/cats/2017-05-13-26782367_p0.jpg)
 
 第一次使用 Springboot 应该是15年年底，当时就被这种约定大于配置的设计惊呆了。那个时候才从上一家公司跳槽，用的是 Spring  3。所以每次开发新项目的时候，配置起来都让我十分痛苦，也因此喜欢上了 Springboot 的种种便利。
 
