Add more feature image

--- a/source/_posts/2013-11-25.md
+++ b/source/_posts/2013-11-25.md
@@ -4,10 +4,9 @@ tags:
   - Android
 categories: 学习
 permalink: the-poor-efficiency-of-android-program
+featureImage: https://cat.yufan.me/cats/ame/android-gone-packing.jpg
 date: 2013-11-25 11:07:10
 ---
-
-![cover](https://cat.yufan.me/cats/ame/android-gone-packing.jpg)
 
 这天群里面大家都闲的时候，某君开始吐槽Android上的UC游览器，说以前版本的有多么快，现在的内存占用多大、多卡。一看到这个话题我就十分感兴趣，于是我就来胡扯一下Android上的程序效率问题，非专业文章，不喜勿看。
 
