--- a/source/_posts/2013-12-02.md
+++ b/source/_posts/2013-12-02.md
@@ -5,12 +5,11 @@ tags:
   - 原创
 categories: 文章
 permalink: meeting
+featureImage: https://cat.yufan.me/cats/20131202153635.jpg
 id: 115
 updated: '2015-04-16 05:11:48'
 date: 2013-12-02 23:36:59
 ---
-
-![cover](https://cat.yufan.me/cats/20131202153635.jpg)
 
 写博客的时候最期待的就是遇见形形色色的人了，有时候能遇见这样一个可以聊得开的人，然后能交个朋友，其实真是一件非常舒心的事。下面节选了我和一位博友的来信，期待能遇见一个未知的你，和你交个知心朋友。
 
