--- a/source/_posts/2014-02-19.md
+++ b/source/_posts/2014-02-19.md
@@ -5,12 +5,11 @@ tags:
   - 黑历史
 categories: 文章
 permalink: the-things-you-dont-know
+featureImage: https://cat.yufan.me/cats/20140218235636.jpg
 id: 117
 updated: '2015-04-16 05:12:48'
 date: 2014-02-19 07:33:36
 ---
-
-![cover](https://cat.yufan.me/cats/20140218235636.jpg)
 
 这是一篇胡言乱语的文章。
 
