--- a/source/_posts/2014-02-20.md
+++ b/source/_posts/2014-02-20.md
@@ -5,12 +5,11 @@ tags:
   - 黑历史
 categories: 文章
 permalink: black-history-of-my-childhood
+featureImage: https://cat.yufan.me/cats/20140220144644.jpg
 id: 118
 updated: '2015-04-16 05:13:18'
 date: 2014-02-20 22:22:07
 ---
-
-![cover](https://cat.yufan.me/cats/20140220144644.jpg)
 
 如果有人和我说小孩子什么都不懂，阻止他们玩电脑、看电视很容易的话，那么我的经历绝对会告诉你，你丫太天真了。
   
