--- a/source/_posts/2014-03-16.md
+++ b/source/_posts/2014-03-16.md
@@ -5,12 +5,11 @@ tags:
   - 爱情
 categories: 文章
 permalink: the-poem-of-forget
+featureImage: https://cat.yufan.me/cats/20140209153355.jpg
 id: 119
 updated: '2015-04-16 05:13:41'
 date: 2014-03-16 04:41:24
 ---
-
-![cover](https://cat.yufan.me/cats/20140209153355.jpg)
 
 有人说，记忆就像一首歌，你记不得它的词，却忘不了熟悉的曲调。香香姐姐说，记忆就像是陈年的女儿红，时间愈久才弥香。而我说：记忆，就是已经结痂的疤，每一次被迫想起，都扯得血肉模糊。
   
