--- a/source/_posts/2014-06-09.md
+++ b/source/_posts/2014-06-09.md
@@ -5,12 +5,11 @@ tags:
   - 毕业
 categories: 文章
 permalink: my-university-life
+featureImage: https://cat.yufan.me/cats/my-university-sdu.jpg
 id: 123
 updated: '2016-02-17 20:04:54'
 date: 2014-06-09 15:52:09
 ---
-
-![cover](https://cat.yufan.me/cats/my-university-sdu.jpg)
 
 ## 一、回忆
 
