--- a/source/_posts/2014-07-14.md
+++ b/source/_posts/2014-07-14.md
@@ -5,12 +5,12 @@ tags:
   - 工作
 categories: 文章
 permalink: the-first-week-of-accession
+featureImage: https://cat.yufan.me/cats/yeepay-front.jpg
 id: 124
 updated: '2016-02-17 20:05:15'
 date: 2014-07-14 08:41:09
 ---
 
-![cover](https://cat.yufan.me/cats/yeepay-front.jpg)
 ## 一、适应早起
 
 有时候，伴着6点的闹钟声醒来，大抵会有种回到高中的感觉。习惯了大学里一觉睡到上午9点的感觉，现在突然要早起，一开始还真有点不适应。
