--- a/source/_posts/2014-08-09.md
+++ b/source/_posts/2014-08-09.md
@@ -5,10 +5,9 @@ tags:
   - Linux
 categories: 学习
 permalink: this-is-the-linux
+featureImage: https://cat.yufan.me/cats/ame/this-is-linux.jpg
 date: 2014-08-09 23:16:46
 ---
-
-![cover](https://cat.yufan.me/cats/ame/this-is-linux.jpg)
 
 来北京工作已经一个多月，大都市的生活比起读大学要忙碌得多，尤其是出行，基本以小时为计时单位。有时茫然看着窗外车水马龙，会有些迷茫自己选择的是对还是错。
 
