--- a/source/_posts/2015-03-19.md
+++ b/source/_posts/2015-03-19.md
@@ -4,10 +4,9 @@ tags:
   - Java
 categories: 学习
 permalink: the-better-way-to-make-objects
+featureImage: https://cat.yufan.me/cats/ame/ruby-code-snippet.jpg
 date: 2015-03-19 01:03:00
 ---
-
-![cover](https://cat.yufan.me/cats/ame/ruby-code-snippet.jpg)
 
 写Java一类的面相对象语言的程序员常常会遇到这么一个冷笑话：我今年都30了，还没找到对象，怎么办？简单啊，new 一个对象就好。
 
