--- a/source/_posts/2015-05-09.md
+++ b/source/_posts/2015-05-09.md
@@ -5,12 +5,11 @@ tags:
   - 爱情
 categories: 文章
 permalink: lets-married
+featureImage: https://cat.yufan.me/cats/2015051001.jpg
 id: 125
 updated: '2016-02-17 20:00:51'
 date: 2015-05-09 23:26:12
 ---
-
-![cover](https://cat.yufan.me/cats/2015051001.jpg)
 
 速度与激情7这一阵子很风靡，我却没有赶潮流看零点首映，上周末因为公司机房断电没法加班，便买了张票去看看，也算是我对保罗的致敬。
 
