--- a/source/_posts/2015-05-12.md
+++ b/source/_posts/2015-05-12.md
@@ -4,12 +4,11 @@ tags:
   - 雨季
 categories: 文章
 permalink: i-am-right-here
+featureImage: https://cat.yufan.me/cats/2015052401.jpg
 id: 128
 updated: '2016-02-17 20:00:33'
 date: 2015-05-12 08:20:50
 ---
-
-![cover](https://cat.yufan.me/cats/2015052401.jpg)
 
 浑浑噩噩熬过了一周，又是一个月的月底。书架上的《言叶之庭》，还只翻了两页。记得去年看完新海诚的同名动画的时候，就被动画里面爱情感动得落泪。跨越了年龄的距离，爱情，可以那么朴实。
 
