--- a/source/_posts/2015-05-31.md
+++ b/source/_posts/2015-05-31.md
@@ -5,12 +5,11 @@ tags:
   - 软件
 categories: 学习
 permalink: how-to-choose-your-tools
+featureImage: https://cat.yufan.me/cats/2015051201.jpg
 id: 140
 updated: '2015-05-31 07:20:57'
 date: 2015-05-31 06:37:00
 ---
-
-![cover](https://cat.yufan.me/cats/2015051201.jpg)
 
 我一向不喜欢做一名所谓的“传教者”，向你推荐哪个软件好用，哪个软件比哪个软件好用，做什么事有什么好的软件可以实现。很多时候别人问我类似的软件推荐需求时，我都尽量避免回答。
 
