--- a/source/_posts/2015-09-06.md
+++ b/source/_posts/2015-09-06.md
@@ -4,12 +4,11 @@ tags:
   - 水一个
 categories: 文章
 permalink: we-are-stranger
+featureImage: https://cat.yufan.me/cats/2015090601.jpg
 id: 141
 updated: '2016-02-04 14:56:26'
 date: 2015-09-06 03:11:19
 ---
-
-![cover](https://cat.yufan.me/cats/2015090601.jpg)
 
 还未从忙碌中回神，八月就这么不知不觉地过去，周遭的人事变换，认识了些陌生的新面孔，也少了些熟悉的旧面孔。
 
