--- a/source/_posts/2015-09-21.md
+++ b/source/_posts/2015-09-21.md
@@ -6,12 +6,11 @@ tags:
   - OSX
 categories: 学习
 permalink: osx-easyconnect-problem
+featureImage: https://cat.yufan.me/cats/2015092101.jpg
 id: 142
 updated: '2015-10-21 15:17:48'
 date: 2015-09-21 04:05:43
 ---
-
-![cover](https://cat.yufan.me/cats/2015092101.jpg)
 
 ## 前言
 
