--- a/source/_posts/2015-10-26.md
+++ b/source/_posts/2015-10-26.md
@@ -6,12 +6,11 @@ tags:
   - Maven
 categories: 学习
 permalink: upgrade-nexus-from-old-install
+featureImage: https://cat.yufan.me/cats/2015102601.jpg
 id: 143
 updated: '2016-01-11 00:31:01'
 date: 2015-10-26 05:03:07
 ---
-
-![cover](https://cat.yufan.me/cats/2015102601.jpg)
 
 ## 一、前言：
 
