--- a/source/_posts/2015-12-08.md
+++ b/source/_posts/2015-12-08.md
@@ -5,12 +5,11 @@ tags:
   - API
 categories: 学习
 permalink: rest-api-desgin
+featureImage: https://cat.yufan.me/cats/2015120801.gif
 id: 144
 updated: '2016-05-09 02:10:49'
 date: 2015-12-08 03:13:21
 ---
-
-![cover](https://cat.yufan.me/cats/2015120801.gif)
 
 # 一、前言
 
