--- a/source/_posts/2015-12-23.md
+++ b/source/_posts/2015-12-23.md
@@ -4,12 +4,11 @@ tags:
   - 饮食
 categories: 文章
 permalink: dumplings-in-winter-solstice
+featureImage: https://cat.yufan.me/cats/2015122301.jpg
 id: 145
 updated: '2016-02-04 14:55:29'
 date: 2015-12-23 21:24:10
 ---
-
-![cover](https://cat.yufan.me/cats/2015122301.jpg)
 
 昨天冬至，大家都吃水饺了么？
 
