--- a/source/_posts/2016-03-24.md
+++ b/source/_posts/2016-03-24.md
@@ -1,14 +1,13 @@
 ---
 title: 工作心得总结
 permalink: work-summary
+featureImage: https://cat.yufan.me/cats/2016032401.jpg
 id: 149
 updated: '2016-03-24 13:25:49'
 date: 2016-03-24 13:05:33
 tags: 思考
 categories: 学习
 ---
-
-![cover](https://cat.yufan.me/cats/2016032401.jpg)
 
 ## 注意总结与反馈
 
