--- a/source/_posts/2016-04-04.md
+++ b/source/_posts/2016-04-04.md
@@ -4,12 +4,11 @@ tags:
   - 随笔
 categories: 学习
 permalink: just-try
+featureImage: https://cat.yufan.me/cats/2016040401.jpg
 id: 150
 updated: '2016-06-12 00:07:12'
 date: 2016-04-04 20:49:47
 ---
-
-![cover](https://cat.yufan.me/cats/2016040401.jpg)
 
 上周和一个即将毕业的大学生聊天，他很厉害，学了很多，抱怨到很多人学了很多编程语言，但最后都只是会写一个“Hello World”<sup>〔1〕</sup>的程度。我说，因为他们大多是一直在准备学习，往往刚开始学的时候，便放弃了。
 
