--- a/source/_posts/2016-04-30.md
+++ b/source/_posts/2016-04-30.md
@@ -1,14 +1,13 @@
 ---
 title: 忘记时间
 permalink: forget-past
+featureImage: https://cat.yufan.me/cats/2016043001.jpg
 id: 151
 updated: '2016-04-30 20:09:45'
 date: 2016-04-30 18:40:59
 tags: 回忆
 categories: 文章
 ---
-
-![cover](https://cat.yufan.me/cats/2016043001.jpg)
 
 最近一次登录快盘，忽然发现登录界面上出现了6月30日后关闭的字样。
 
