--- a/source/_posts/2016-05-05.md
+++ b/source/_posts/2016-05-05.md
@@ -5,12 +5,11 @@ tags:
   - 前端
 categories: 学习
 permalink: introduction-to-webpack-part-1
+featureImage: https://cat.yufan.me/cats/2016050603.png
 id: 152
 updated: '2016-05-06 02:15:56'
 date: 2016-05-05 22:38:28
 ---
-
-![cover](https://cat.yufan.me/cats/2016050603.png)
 
 Webpack 是近段时间非常流行的前端流程处理工具，用于实时执行构建任务和预处理你的文件。
 
