--- a/source/_posts/2014-01-01.md
+++ b/source/_posts/2014-01-01.md
@@ -5,12 +5,11 @@ tags:
   - 怀旧
 categories: 文章
 permalink: grown-old-with-a-age
+featureImage: https://cat.yufan.me/cats/20140102153935.jpg
 id: 116
 updated: '2015-04-16 05:12:28'
 date: 2014-01-01 21:44:37
 ---
-
-![cover](https://cat.yufan.me/cats/20140102153935.jpg)
 
 过去到底有什么呢？为什么会让这么多人怀念，甚至是想回到过去？本想一点点梳理细说那些难忘的点点滴滴，却总记不起曾经的刻骨铭心，只剩下些支离破碎的片段可以回忆。日本有句谚语：“三岁时眼睛里看见的东西，到了八十岁都不会忘记。”可是，才二十岁出头的我还是忘记了……
 
