--- a/source/_posts/2015-05-10.md
+++ b/source/_posts/2015-05-10.md
@@ -4,12 +4,11 @@ tags:
   - 慢生活
 categories: 文章
 permalink: having-a-lomo-life
+featureImage: https://cat.yufan.me/cats/2015051003.jpg
 id: 126
 updated: '2016-02-17 20:00:42'
 date: 2015-05-10 04:01:20
 ---
-
-![cover](https://cat.yufan.me/cats/2015051003.jpg)
 
 因为工作的缘故，自己可控的闲暇时间越来越少，每日的加班，紧张得要死的工期。组长的口号就是：最短的时间，做出更多的事情。自然地，那种大学时的自由阅读时光愈发遥不可及。也就过年时难得有空看看格言，开篇第一句话就是：“时间就像海绵里的水，总是挤，也会没有的。”
 
