--- a/source/_posts/2015-07-04.md
+++ b/source/_posts/2015-07-04.md
@@ -4,12 +4,11 @@ tags:
   - 败家
 categories: 文章
 permalink: gossip-on-profligate-spending
+featureImage: https://cat.yufan.me/cats/2015070401.jpg
 id: 128
 updated: '2016-02-17 12:00:25'
 date: 2015-07-04 15:44:00
 ---
-
-![cover](https://cat.yufan.me/cats/2015070401.jpg)
 
 当年玩基三的时候流行着这么一句话：一入基三深似海，从此节操是路人。对于我这个用惯了Apple的人而言，可能感触最深的话就是，一入苹果深似海，从此金钱不够买。
 
