--- a/source/_posts/2016-02-24.md
+++ b/source/_posts/2016-02-24.md
@@ -5,18 +5,13 @@ tags:
   - oAuth2
 categories: 学习
 permalink: oauth-on-kong
+featureImage: https://cat.yufan.me/cats/2016022401.png
 id: 148
 updated: '2016-02-24 17:21:14'
 date: 2016-02-24 16:45:56
 ---
 
-![cover](https://cat.yufan.me/cats/2016022401.png)
-
 ## 1. Kong OAuth 2.0 认证流程
-
-![](https://cat.yufan.me/cats/2016022403.png)
-
-Kong的认证流程如上图所示：
 
 ### 1.1 相关角色
 
@@ -27,6 +22,10 @@ Kong的认证流程如上图所示：
 5. **API 提供者：**实际的API提供者，与Kong交互，外部无法直接访问。
 
 <!--more-->
+
+![](https://cat.yufan.me/cats/2016022403.png)
+
+Kong的认证流程如上图所示：
 
 ### 1.2 认证流程
 
