Finished feature image

--- a/source/_posts/2013-01-14.md
+++ b/source/_posts/2013-01-14.md
@@ -6,12 +6,11 @@ tags:
   - 青春
 categories: 文章
 permalink: when-i-was-young
+featureImage: https://cat.yufan.me/cats/20130113183344.jpg
 id: 98
 updated: '2015-04-16 04:55:43'
 date: 2013-01-14 02:13:57
 ---
-
-![cover](https://cat.yufan.me/cats/20130113183344.jpg)
 
 简单地重温了一遍《与青春有关的日子》，停不住的思绪逐渐泛滥。
 
