--- a/source/_posts/2013-03-09.md
+++ b/source/_posts/2013-03-09.md
@@ -6,12 +6,11 @@ tags:
   - 青春
 categories: 文章
 permalink: pushu-and-his-flower
+featureImage: https://cat.yufan.me/cats/20130308231356.jpg
 id: 102
 updated: '2015-04-16 04:57:21'
 date: 2013-03-09 07:15:11
 ---
-
-![cover](https://cat.yufan.me/cats/20130308231356.jpg)
 
 不知怎么的，这几天听起朴树的《那些花儿》时，总会有一种熟悉的孤独感。3月的济南天渐渐回暖，一个人在宿舍整理文件时发现此曲，思绪不禁回到很久以前……
 
