--- a/source/_posts/2013-03-17.md
+++ b/source/_posts/2013-03-17.md
@@ -6,12 +6,11 @@ tags:
   - 爱情
 categories: 文章
 permalink: trivial-thought
+featureImage: https://cat.yufan.me/cats/20130317015952.jpg
 id: 103
 updated: '2016-02-17 20:03:23'
 date: 2013-03-17 10:04:33
 ---
-
-![cover](https://cat.yufan.me/cats/20130317015952.jpg)
 
 ## 任性的我
 
