--- a/source/_posts/2013-04-07.md
+++ b/source/_posts/2013-04-07.md
@@ -5,12 +5,11 @@ tags:
   - 杂思
 categories: 文章
 permalink: spring-essay
+featureImage: https://cat.yufan.me/cats/20130322100328.jpg
 id: 104
 updated: '2016-02-17 20:04:27'
 date: 2013-04-07 05:49:27
 ---
-
-![cover](https://cat.yufan.me/cats/20130322100328.jpg)
 
 许多年前，当我还在读老舍《济南的冬天》的时候，着实被他里面的描写所吸引。古老的济南城配上半点烟雪的“水墨画”成了我的一种向往，我在想象着，这，就是济南。
 
