--- a/source/_posts/2013-04-24.md
+++ b/source/_posts/2013-04-24.md
@@ -5,10 +5,9 @@ tags:
   - HTML
 categories: 学习
 permalink: the-best-way-to-learn-css
+featureImage: https://cat.yufan.me/cats/ame/python-gtk-css-titleimage.jpg
 date: 2013-04-27 09:52:12
 ---
-
-![cover](https://cat.yufan.me/cats/ame/python-gtk-css-titleimage.jpg)
 
 CSS与HTML相结合地进行工作；HTML整理出页面的结构，CSS使它们看起来更加漂亮并且加入了细节上的交互。作为一个网站设计者你应该认真地学习这些语言。即使你并不需要自己来编程，理解它们如何工作将有助于你设计页面。
 
