--- a/source/_posts/2013-04-30.md
+++ b/source/_posts/2013-04-30.md
@@ -4,10 +4,9 @@ tags:
   - 影评
 categories: 文章
 permalink: whose-youth-do-not-have-a-shallow-bruising
+featureImage: https://cat.yufan.me/cats/ame/losted-youth.jpg
 date: 2013-04-30 00:48:42
 ---
-
-![cover](https://cat.yufan.me/cats/ame/losted-youth.jpg)
 
 夜晚临近子夜看完整部电影《致我们终将逝去的青春》，现在的我坐在桌前细细回味，感触颇丰。去看的时候同学说时光网上的评分太低了，还是去看钢铁侠吧。我说不看，就算是烂片我也要去看，因为我相信赵薇，相信原著辛夷坞的剧情。事实证明，整部作品很棒，从郑微的活泼、灵动上我似乎看到了当年小燕子的影子，不知怀旧是不是已为人母的赵薇改拍此作的理由之一。
 
