--- a/source/_posts/2013-05-01.md
+++ b/source/_posts/2013-05-01.md
@@ -4,10 +4,9 @@ tags:
   - Schema
 categories: 学习
 permalink: the-protocol-relative-url
+featureImage: https://cat.yufan.me/cats/ame/the-protocol-relative-url.jpg
 date: 2013-05-01 05:19:12
 ---
-
-![cover](https://cat.yufan.me/cats/ame/the-protocol-relative-url.jpg)
 
 这里有一个你可以拿走，并将能拯救你于头痛中的小窍门。
 
