--- a/source/_posts/2013-05-20.md
+++ b/source/_posts/2013-05-20.md
@@ -4,10 +4,9 @@ tags:
   - 随想
 categories: 文章
 permalink: lost-myself-in-may-day
+featureImage: https://cat.yufan.me/cats/ame/20120203543.png
 date: 2013-05-20 06:36:22
 ---
-
-![cover](https://cat.yufan.me/cats/ame/20120203543.png)
 
 五月济南的生活有点错乱，天气忽冷忽热地延续了3周，才想着是不是已经算作夏天时昨夜又下雨降温到18℃。搞得我现在的床上还放着毛毯、棉被、空调被，按照温度随时选取。╮(╯▽╰)╭
 
