--- a/source/_posts/2013-06-30.md
+++ b/source/_posts/2013-06-30.md
@@ -5,12 +5,11 @@ tags:
   - 青春
 categories: 文章
 permalink: unwilling-to-grow-old
+featureImage: https://cat.yufan.me/cats/20130630014602.jpg
 id: 106
 updated: '2015-04-16 05:07:26'
 date: 2013-06-30 09:29:55
 ---
-
-![cover](https://cat.yufan.me/cats/20130630014602.jpg)
 
 “为了看看阳光，我来到世上”。第一次读到巴尔蒙特的这句诗后，就几乎再也没有忘记过。那种内心的纯净、光明与温暖，在读此诗时铺面而来，简单地仿佛看不到忧伤的痕迹，一如你我的十八年华。
 
