--- a/source/_posts/2013-07-23.md
+++ b/source/_posts/2013-07-23.md
@@ -5,10 +5,9 @@ tags:
   - 翻译
 categories: 学习
 permalink: android-versions-explained
+featureImage: https://cat.yufan.me/cats/ame/Android-Authority-Back-to-Basics-645x434.jpg
 date: 2013-07-23 14:19:12
 ---
-
-![Back To Basics](https://cat.yufan.me/cats/ame/Android-Authority-Back-to-Basics-645x434.jpg)
 
 >欢迎大家来到**“小白成长之路”系列**，在这一系列的文章中我们将详细讲解Android的每一个层面，以此让你理性地选择出适合你的Android设备。本周的头篇文章我们将介绍Android的版本变迁，此后每周我们都将发表一篇此系列的文章，敬请大家保持关注。（友情提示：你可以点击文章底部的`小白成长之路`标签来获取此系列的全部译文。）
 
