--- a/source/_posts/2013-08-02.md
+++ b/source/_posts/2013-08-02.md
@@ -5,12 +5,12 @@ tags:
   - 杂思
 categories: 文章
 permalink: the-moonlight-in-city
+featureImage: https://cat.yufan.me/cats/20130802144831.jpg
 id: 109
 updated: '2015-04-16 05:08:40'
 date: 2013-08-02 23:51:26
 ---
 
-![cover](https://cat.yufan.me/cats/20130802144831.jpg)
 听着许美静的《城里的月光》，不由得想起童年读过的一句小诗：梦中每迷还乡路，愈知晚途念桑梓。
 
 对于家乡，思念的情感是难以割断的，而且会越来越萦纡在脑海的深处，形成可以称之为追忆的东西。每颗心上某一个地方，总有个记忆挥不散，每个深夜某一个地方，总有着最深的思量。无论你离家多久、离家多远，这一份浓浓的乡愁不会随着时间淡化，毕竟“月是故乡明”。
