--- a/source/_posts/2013-08-11.md
+++ b/source/_posts/2013-08-11.md
@@ -5,10 +5,9 @@ tags:
   - 翻译
 categories: 学习
 permalink: screen-technology-explained
+featureImage: https://cat.yufan.me/cats/ame/Android-Authority-Back-to-Basics-645x434.jpg
 date: 2013-08-11 16:21:42
 ---
-
-![Back To Basics](https://cat.yufan.me/cats/ame/Android-Authority-Back-to-Basics-645x434.jpg)
 
 欢迎回来朋友们，在小白成长之路系列中我们将详细讲解Android的每一个层面，以此让你理性地选择出适合你的Android设备。
 
