--- a/source/_posts/2013-09-22.md
+++ b/source/_posts/2013-09-22.md
@@ -6,12 +6,11 @@ tags:
   - 杂思
 categories: 文章
 permalink: mid-autumn-festival
+featureImage: https://cat.yufan.me/cats/20130921211546.jpg
 id: 111
 updated: '2015-04-16 05:09:57'
 date: 2013-09-22 05:16:57
 ---
-
-![cover](https://cat.yufan.me/cats/20130921211546.jpg)
 
 往日思绪缱绻，起舞于静夜暗自妖娆，清风徐来芳草荡，酣梦恰此时光。
 
