--- a/source/_posts/2013-11-19.md
+++ b/source/_posts/2013-11-19.md
@@ -5,12 +5,11 @@ tags:
   - 黑历史
 categories: 文章
 permalink: wretched-history-of-my-childhood
+featureImage: https://cat.yufan.me/cats/20131118232914.jpg
 id: 114
 updated: '2015-04-16 05:11:12'
 date: 2013-11-19 07:00:49
 ---
-
-![cover](https://cat.yufan.me/cats/20131118232914.jpg)
 
 有道是人不猥琐枉少年，所谓宅男，鲜有不猥琐的。自古风流出少年，已然成为定理。作为即将大学毕业的大龄伪少年，我就来扒一扒当年自己做过的那些黑历史吧。
 
