--- a/source/_posts/2017-06-28.md
+++ b/source/_posts/2017-06-28.md
@@ -6,7 +6,7 @@ tags:
   - 工作室
 categories: 游戏
 permalink: atelier-firis-first-year-walk-through
-featureImage: https://wx3.sinaimg.cn/large/80c744e8ly1fc99y0g8rrj21hc0u0dr0.jpg
+featureImage: https://cat.yufan.me/cats/2017-06-28-01.jpg
 date: 2017-06-28 07:52:00
 ---
 
