--- a/source/_posts/2013-01-30.md
+++ b/source/_posts/2013-01-30.md
@@ -5,12 +5,11 @@ tags:
   - 梦想
 categories: 文章
 permalink: choices
+featureImage: https://cat.yufan.me/cats/20130129235713.jpg
 id: 99
 updated: '2015-04-16 04:56:10'
 date: 2013-01-30 07:45:13
 ---
-
-![cover](https://cat.yufan.me/cats/20130129235713.jpg)
 
 才上大学时和高中的老同学聊天，他问我：“你现在读哪个大学，什么专业？”我告诉他我现在在山大软院。他倒是惊讶了，“当年高中时你的化学读得那么好，为什么就放弃了呢？”我想了又想，却不知道该如何回答。
 
