--- a/source/_posts/2013-02-01.md
+++ b/source/_posts/2013-02-01.md
@@ -6,12 +6,11 @@ tags:
   - 温情
 categories: 文章
 permalink: tender-feeling
+featureImage: https://cat.yufan.me/cats/20130131214003.jpg
 id: 100
 updated: '2015-04-16 04:56:37'
 date: 2013-02-01 08:00:42
 ---
-
-![cover](https://cat.yufan.me/cats/20130131214003.jpg)
 
 “你出生的时候才这么大，不足一尺。”老爸在那里形象地比划着，“当时没有保温箱，你的身体冰凉的，我一手把你夹在胳肢窝里，拿被子捂着。怕给你闷坏了，过一会还凑过去听听，嗯，还有呼吸，继续捂着，这样子才把你身体给你弄暖和了。”这时，一旁的老妈幸灾乐祸地说：“老猪（我妈对于老爸的雅称），你怎么不说你年轻的时候狐臭味那么重。儿呀，你就是闻你老爸的狐臭味长大的。”(#ﾟДﾟ)ｺﾞﾙｧ!!纳呢？
 
