--- a/source/_posts/2013-03-03.md
+++ b/source/_posts/2013-03-03.md
@@ -5,20 +5,17 @@ tags:
   - 爱情
 categories: 文章
 permalink: gray-avatar
+featureImage: https://cat.yufan.me/cats/20130302161515.jpg
 id: 101
 updated: '2015-04-16 04:56:58'
 date: 2013-03-03 00:25:07
 ---
 
-![cover](https://cat.yufan.me/cats/20130302161515.jpg)
-
->仅以本文纪念那些热血的日子。
-
-<!--more-->
-
 爱情，对于雨帆来说，一直是难以企及的奢侈品。
 
 这些天一个人在家时，总是有些寂寞。不知道是由于不准备考研和云儿闹翻后的自责，还是放假分别后的孤单，不由自主地开始想起一些人，怀念起一些事。一个人深夜里登上雪藏两年的QQ，看着一排排熟悉的头像，熟悉的昵称，猛然间看见名为老婆的头像，却怎么的也翻不下去了……
+
+<!--more-->
 
 点开聊天窗口，又关闭，心有千言万语凝噎在喉间，却连简单的一句问好都不敢说出。我怕一说出口，就是永久，QQ里就是迟迟未亮的灰色头像。才上大学时我们约好的要坚守到毕业呢？我说，绍君，你要等我啊，等我毕了业，找到工作，我们就结婚，生两个孩子。可是，为什么我们之间的话越来越少，越来越简短。有时候我拨通电话，通后彼此却都不知道说什么好，话筒里是那么凝重的沉默，最后只能道一声晚安。
 
@@ -33,3 +30,5 @@ date: 2013-03-03 00:25:07
 于是，以前看得见的东西渐渐地消失了，看不见的却又浮现在眼前。一直以来，奉行着自己的信念，我的幸福，该用我的手，不！只有用我的手来抓住，对于我来说什么是幸福的，我不会让我以外的任何人来决定，然而有时如果继续寻找看不见的东西，继续改变我的世界，或许……所以在那个暑假，我做出了抉择，看不见的东西，果然还是不要看到的好……
 
 世间万物无定形，变化永远比认知来得迅速，感情的滞留永远比变化来的缓慢，认可、被认可，否定、被否定，就这样，遇见了，错过了，珍视了，放下了，看得见的，看不见的。人绝对不会永远停留在相同的场所，不论是一边哭泣也好，大吼大叫也罢，总之是会不断的往前走，有时候我们必须舍弃什么，去选择其他的什么。是的，走着自己的路，迎接充满未知的下一步，又有谁可知前方的道路上，看不见的荆棘密布，看得见的似锦繁花。不过无论怎样那个绝不流泪的誓言，那份义无返顾的坚强，那个曾经的柔软，会一如既往。
+
+>仅以本文纪念那些青春的日子。
