--- a/source/_posts/2013-05-25.md
+++ b/source/_posts/2013-05-25.md
@@ -2,11 +2,10 @@
 title: 那个离你而去的女孩
 date: 2013-05-25 17:27:58
 permalink: the-girl-who-leave-you
+featureImage: https://cat.yufan.me/cats/ame/the-garden-of-words.jpg
 categories: 文章
 tags: 动漫
 ---
-
-![cover](https://cat.yufan.me/cats/ame/the-garden-of-words.jpg)
 
 雨，漫天漫地的雨，清澈透亮，不含一丝杂质。初看此片的第一眼，仿若置身于漫无止境的五月雨季。雨天潮湿的心情，凉亭下的不期而遇，那人似曾相识。
 
