--- a/source/_posts/2013-06-21.md
+++ b/source/_posts/2013-06-21.md
@@ -5,12 +5,11 @@ tags:
   - 杂思
 categories: 文章
 permalink: those-people
+featureImage: https://cat.yufan.me/cats/20130621021738.jpg
 id: 105
 updated: '2015-04-16 04:59:12'
 date: 2013-06-21 10:24:04
 ---
-
-![cover](https://cat.yufan.me/cats/20130621021738.jpg)
 
 闲了两个月后，又把打算停笔不写的博客搭建了起来，这算不算个人的又一次纠结？掐指一算，写博也已经有两年之久，这期间建博的来来去去，有些走了，有些还在继续。后台留言板内早些年的留言链接全是404，只留下还存活着的头像，孤零零地像一座座坟墓。
 
