--- a/source/_posts/2013-07-19.md
+++ b/source/_posts/2013-07-19.md
@@ -5,12 +5,11 @@ tags:
   - 编程
 categories: 文章
 permalink: summer-training-record
+featureImage: https://cat.yufan.me/cats/20130718223208.jpg
 id: 107
 updated: '2015-04-16 05:07:50'
 date: 2013-07-19 06:31:28
 ---
-
-![cover](https://cat.yufan.me/cats/20130718223208.jpg)
 
 大概是很久没有提笔的缘故，一直找不到什么可以拿出来写的话题。七月的济南打破了一如既往的干旱，这一阵子阴雨连绵，恍然间有种已经回到厦门的错乱感。只是现在的我依旧坐在实验室的机房内敲着代码，窗外下着大雨，身旁来自山东中医药的张远馨同学笑着对我说：“终于全部写完了。”
 
