--- a/source/_posts/2013-07-28.md
+++ b/source/_posts/2013-07-28.md
@@ -5,12 +5,11 @@ tags:
   - 迷茫
 categories: 文章
 permalink: afternoon-nap
+featureImage: https://cat.yufan.me/cats/20130727222620.jpg
 id: 108
 updated: '2015-04-16 05:08:11'
 date: 2013-07-28 06:26:33
 ---
-
-![cover](https://cat.yufan.me/cats/20130727222620.jpg)
 
 时常会望着天空，周遭的喧嚣便会变得平静。我并不明白存在的意义，就像我们追逐着的世界。若是我们能忘记目的地，你说，会是平淡的快乐，还是空洞的烦恼？
 
