--- a/source/_posts/2013-08-07.md
+++ b/source/_posts/2013-08-07.md
@@ -5,12 +5,11 @@ tags:
   - 死亡
 categories: 文章
 permalink: fear-of-death
+featureImage: https://cat.yufan.me/cats/20130807085219.jpg
 id: 110
 updated: '2015-04-16 05:09:41'
 date: 2013-08-07 16:52:58
 ---
-
-![cover](https://cat.yufan.me/cats/20130807085219.jpg)
 
 > 此刻有谁在世上某处走， 无缘无故在世上走， 走向我。
 此刻有谁在世上某处死， 无缘无故在世上死， 望着我。
