--- a/source/_posts/2013-10-06.md
+++ b/source/_posts/2013-10-06.md
@@ -5,14 +5,11 @@ tags:
   - 心路历程
 categories: 文章
 permalink: change-it-or-not
+featureImage: https://cat.yufan.me/cats/20131005205249.jpg
 id: 112
 updated: '2015-04-16 05:10:17'
 date: 2013-10-06 03:33:12
 ---
-
-![cover](https://cat.yufan.me/cats/20131005205249.jpg)
-
-![](https://cat.yufan.me/cats/20131005190924.png)
 
 10年，《[雨帆](http://yufan.me)》呱呱落地。带着青春式的忧郁，一个人、一本写得满满的手抄本，一间写满喜怒哀乐的个人网站悄然面世。
 
@@ -25,8 +22,6 @@ date: 2013-10-06 03:33:12
 2年，不长不短的时间，身边的人都变了不少。豆豆姐姐说：我已不再如从前、不想倾诉亦不再倾听。愿岁月静好！松鼠哥哥说：现在最关键的就是娶个小松鼠。咚门本科毕业，考上了研究生。而自己，也即将投身于茫茫的毕业求职大潮中。
 
 与《雨帆》一起改变一起成长的岁月，是一叠写满故事的昨天。每每想起，那些逝去的、留给博客的青春，简单而朴素，忧伤并快乐，饱满地熠熠生辉。
-
-![](https://cat.yufan.me/cats/20131005190923.png)
 
 说雨帆变了，其实也没变，依旧爱思考，依旧爱伤感。对于我而言,生活中的很多情感，藏在心底便是一种真实、深刻。一旦说出来，反而索然无味，比如爱情。但是沉默不等于不会说，而是一种积累、思考。我已不再如以前，每每遇到什么不幸就唉天叹地。相对的，看得更多，说的写的越少……</p>
 
