--- a/source/_posts/2013-11-04.md
+++ b/source/_posts/2013-11-04.md
@@ -5,12 +5,11 @@ tags:
   - 看见
 categories: 文章
 permalink: see-it-or-not
+featureImage: https://cat.yufan.me/cats/20131104123854.jpg
 id: 113
 updated: '2015-04-16 05:10:43'
 date: 2013-11-04 20:39:28
 ---
-
-![cover](https://cat.yufan.me/cats/20131104123854.jpg)
 
 这段时间才入了Kindle，看见贴吧里的人都在推荐《看见》，我是这两天才看。看完之后印象最深的不是柴静本人，而是她所描写的身边的林林总总。书里废话很少，都是朴实的文字但有重量。毕竟作为一个新闻人，你能看见什么，就决定别人能看见什么。
 
