Add the finish paragraph

--- a/source/_posts/2018-12-22.md
+++ b/source/_posts/2018-12-22.md
@@ -36,3 +36,7 @@ date: 2018-12-22 21:15:03
 岁月的脚步不停地惊扰悠远的长梦。佛说“世人不知有因果，因果何曾饶过谁”。看不透这世间的因果，便尝尽苦楚，换得人蒙尘，心蒙垢。
 
 生命不过是张爱玲所说的一袭华美的袍，盛装而来，如转瞬即逝的烟火，争得刹那辉煌。
+
+既然人生注定如戏，也就没什么可黯然的了。黛玉虽苦，却耗尽宝玉一生的真情。琵琶女虽苦，却有“五陵年少争缠头，一曲红绡不知数”的年少。如花虽怜，还有一低眉，一抬眼的两情相悦。
+
+浮生如梦，却也终有不愿醒的时候，叹的是看戏人，迷的是戏中人，各有烟花尽落的快活。
